# Vina

./: .gitignore  docker-compose.legacy.yml  docker-compose.yml
adapter/: Dockerfile
adapter/ros2_ws/src/adapter/launch/: adapter.launch.py
adapter/ros2_ws/src/twist_redirector/: package.xml
adapter/ros2_ws/src/twist_redirector/src/: run.cpp
bridge/: ros1-ros2-bridge.Dockerfile  start_bridge.sh
containers/adapter/: Dockerfile
containers/adapter/ros2_ws/src/adapter/: package.xml  setup.cfg  setup.py
containers/adapter/ros2_ws/src/adapter/adapter/: initialpose.py  odom_to_tf_node.py  scanner_bridge_node.py
containers/adapter/ros2_ws/src/adapter/launch/: adapter.launch.py
containers/adapter/ros2_ws/src/twist_redirector/: CMakeLists.txt
containers/bridge/: ros_bridge.yaml
containers/nav/: Dockerfile
containers/nav/ros2_ws/src/navi/: package.xml  setup.cfg  setup.py
containers/nav/ros2_ws/src/navi/config/: nav2_params_humble.yaml  nav2_params_vision_nav.yaml
containers/nav/ros2_ws/src/navi/launch/: vision_nav.launch.py
containers/nav/ros2_ws/src/navi/navi/: goal_pose_to_nav.py  (+1 more)
containers/service/: Dockerfile
containers/service/ros2_ws/: README.md  compute_tf.py
containers/service/ros2_ws/src/: config.yaml  map_utils.py  run.py
maps/map_scanned_by_woosh/: map.yaml
nav/ros2_ws/src/navi/: setup.py
nav/ros2_ws/src/navi/launch/: nav.launch.py
nav/ros2_ws/src/navi/navi/: nav_service.py
resources/maps/map_07_02/: map_07_02.txt
resources/maps/map_converted_from_pointcloud/: map.yaml
resources/maps/map_scanned_by_robot/: scan_by_robot.txt
(+4 files in other folders)
